# mimerrust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
example/: Cargo.toml
example/src/: main.rs
mimerrust/: Cargo.toml  README.md
mimerrust-sys/: Cargo.toml  README.md  build.rs
mimerrust-sys/bindings/: bindings.rs  bindings_macos.rs  bindings_win.rs
mimerrust-sys/src/: lib.rs
mimerrust/src/: common.rs  connection.rs  cursor.rs  inner_connection.rs  inner_statement.rs  lib.rs  mimer_error.rs  row.rs  statement.rs  testing.rs  transaction.rs  types.rs
mimerrust/tests/: custom_type_example.rs  integration_test2.rs  integration_tests.rs
