[package]
name = "mimerrust"
version = "1.0.2"
edition = "2021"
description = "A Rust API for communicating with the Mimer SQL databases"
repository = "https://github.com/mimersql/mimerrust"
homepage = "https://www.mimer.com"
readme = "README.md"
license = "MIT"
keywords = ["mimer", "sql", "database", "driver", "api"]
categories = ["database"]

[dependencies]
mimerrust-sys = { version = "1.0.1", features = ["internal"] }
parking_lot = "0.12.3"
fallible-streaming-iterator = "0.1.9"
chrono = "0.4"
geo = "0.29.2"
lazy_static = "1.5.0"


[features]
run_bindgen = ["mimerrust-sys/run_bindgen"]
[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]


